Fix mobile menu getting cut off bc of Jumbotron size

--- a/_sass/layout/_jumbotron.scss
+++ b/_sass/layout/_jumbotron.scss
@@ -1,4 +1,7 @@
 .page-jumbotron {
+}
+
+.page-jumbotron__wrapper {
     overflow: hidden;
     position: relative;
 }
